--- a/.github/workflows/run-gen-py.yml
+++ b/.github/workflows/run-gen-py.yml
@@ -18,6 +18,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: 'recursive'
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -37,9 +38,7 @@ jobs:
         run: |
           git config --global user.name "github-actions"
           git config --global user.email "github-actions@github.com"
-          
           git add output/
-
           if git diff --cached --exit-code; then
             echo "No changes to commit."
           else
