--- a/.github/workflows/run-gen-py.yml
+++ b/.github/workflows/run-gen-py.yml
@@ -12,7 +12,9 @@ on:
 jobs:
   generate_output:
     runs-on: ubuntu-latest
-
+    permissions:
+      contents: write
+    
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
